# mis-eventos

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6bafd7c63bb3_initial_tables.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  security.py  seeder.py
backend/app/middleware/: logging.py
backend/app/models/: attendee.py  event.py  role.py  session.py  user.py
backend/app/repositories/: attendee.py  base.py  event.py  session.py  user.py
backend/app/routers/: attendees.py  auth.py  events.py  roles.py  sessions.py  users.py
backend/app/schemas/: attendee.py  common.py  event.py  session.py  user.py
backend/app/services/: attendee.py  auth.py  event.py  session.py
backend/tests/: conftest.py
backend/tests/unit/routers/: test_attendees.py  test_auth.py  test_events.py  test_sessions.py  test_users.py
frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/src/app/core/guards/: auth.guard.ts  role.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts  error.interceptor.ts
frontend/src/app/core/models/: attendee.model.ts  auth.model.ts  event.model.ts  pagination.model.ts  session.model.ts  user.model.ts
frontend/src/app/core/services/: attendee.service.ts  auth.service.spec.ts  (+4 more)
frontend/src/environments/: environment.prod.ts
(+40 files in other folders)
